--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-@import "tailwindcss";
+@import "tailwindcss/preflight";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
+/* Branding */
 body {
-  @apply bg-gray-900 text-white;
+  @apply bg-souldiers-black text-souldiers-gold;
 }
